--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "demo": "https://our.status.im",
     "version": "1.3.0",
     "license": "GNU General Public License, Version 2",
+    "scripts": {
+        "build": "gulp sass",
+        "verify": "gscan -3 ./",
+        "archive": "zip -r our-status-theme.zip . -x 'node_modules/*' -x '.git*'"
+    },
     "engines": {
         "ghost": ">=2.0.0",
         "ghost-api": "v2"
@@ -24,11 +29,6 @@
         "theme",
         "ghost-theme"
     ],
-    "dependencies": {
-        "gulp": "^3.9.1",
-        "gulp-minify": "^3.1.0",
-        "gulp-sass": "^4.0.2"
-    },
     "config": {
         "posts_per_page": 15,
         "image_sizes": {
@@ -40,5 +40,11 @@
                 "width": 720
             }
         }
+    },
+    "devDependencies": {
+        "gscan": "^3.5.5",
+        "gulp": "^3.9.1",
+        "gulp-minify": "^3.1.0",
+        "gulp-sass": "^4.0.2"
     }
 }
