--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "version": "1.3.0",
     "license": "GNU General Public License, Version 2",
     "scripts": {
-        "build": "gulp sass",
+        "getcss": "node ./scripts/getcss.js",
         "verify": "gscan -3 ./",
         "archive": "zip -r our-status-theme.zip . -x 'node_modules/*' -x '.git*'"
     },
     "engines": {
-        "ghost": ">=2.0.0",
-        "ghost-api": "v2"
+        "ghost": ">=3.0.0",
+        "ghost-api": "v3"
     },
     "author": {
         "name": "Robin Percy",
@@ -42,9 +42,7 @@
         }
     },
     "devDependencies": {
-        "gscan": "^3.5.5",
-        "gulp": "^3.9.1",
-        "gulp-minify": "^3.1.0",
-        "gulp-sass": "^4.0.2"
+        "download-file": "^0.1.5",
+        "gscan": "^3.5.5"
     }
 }
